feat: completato header con logo e titolo, definito contenitore

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <!-- Logo e titolo -->
-    <header></header>
-    <main>
+    <header>
+      <img src="./img/Logo.png" alt="logo boolean" />
+      <h1>Todoolist</h1>
+    </header>
+    <main class="conteiner">
       <!-- aggiungere task o sezioni  -->
       <section></section>
       <section>
