feat: aggiunta sezione con bottoni per task e sezioni

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
   </head>
   <body>
     <!-- Logo e titolo -->
-    <header>
+    <header class="bg-white">
       <img src="./img/Logo.png" alt="logo boolean" />
       <h1>Todoolist</h1>
     </header>
-    <main class="conteiner">
+    <main class="container bg-white">
       <!-- aggiungere task o sezioni  -->
-      <section></section>
+      <section class="section-task">
+        <button class="add-task bg-blue">Add Task</button>
+        <button class="add-section bg-white">add section</button>
       <section>
         <!-- Nuovo task -->
         <div></div>
