feat: completo new task e today

--- a/index.html
+++ b/index.html
@@ -17,11 +17,41 @@
       <section class="section-task">
         <button class="add-task bg-blue">Add Task</button>
         <button class="add-section bg-white">add section</button>
+      </section>
       <section>
         <!-- Nuovo task -->
-        <div></div>
+        <div class="pd-left-top">
+          <h3>&blacktriangledown; New Task</h3>
+          <ul>
+            <li>
+              <span class="circle cl-br-green">&check;</span> quartely
+              nresletter
+              <span class="badge bg-blue">editorial</span>
+            </li>
+          </ul>
+        </div>
         <!-- task da fare oggi -->
-        <div></div>
+        <div class="pd-left-top">
+          <h3>&blacktriangledown; Today</h3>
+          <ul>
+            <li>
+              <span class="circle cl-br-green">&check;</span> Recruiting blog
+              post <span class="badge bg-blue">Editorial</span>
+            </li>
+            <li>
+              <span class="circle cl-br-green">&check;</span> Mobile app
+              luanch<span class="badge bg-purple">Q1 goals</span>
+            </li>
+            <li>
+              <span class="circle cl-br-red">&check;</span> interview john
+              <span class="badge bg-green">recruting</span>
+            </li>
+            <li>
+              <span class="circle cl-br-green">&check;</span>summit update to
+              mobile storefronts <span class="badge bg-orange">mobile</span>
+            </li>
+          </ul>
+        </div>
         <!-- task imminenti -->
         <div></div>
       </section>
