feat: aggiunta ultima parte con upcoming

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               luanch<span class="badge bg-purple">Q1 goals</span>
             </li>
             <li>
-              <span class="circle cl-br-red">&check;</span> interview john
+              <span class="circle cl-br-red">&cross;</span> interview john
               <span class="badge bg-green">recruting</span>
             </li>
             <li>
@@ -53,7 +53,28 @@
           </ul>
         </div>
         <!-- task imminenti -->
-        <div></div>
+        <div class="pd-left-top">
+          <h3>&blacktriangledown; Upcoming</h3>
+          <ul>
+            <li>
+              <span class="circle cl-br-red">&cross;</span> shedule meeting with
+              alex
+            </li>
+            <li>
+              <span class="circle cl-br-green">&check;</span> homepage
+              refresh<span class="badge bg-violet">Website</span>
+            </li>
+            <li>
+              <span class="circle cl-br-green">&check;</span> ondoard nre sales
+              team members
+              <span class="badge bg-greenyellow">recruting</span>
+            </li>
+            <li>
+              <span class="circle cl-br-green">&check;</span>review editorial
+              calendar<span class="badge bg-blue">mobile</span>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
   </body>
